<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Page names-->
    <string name="app_name">Othello</string>
    <string name="title_activity_othello">Othello</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="title_activity_rules_page">Introduction</string>
    <string name="title_activity_rule_two">Game Rules</string>
    <string name="title_activity_rule_three">How to win?</string>
    <string name="title_activity_high_scores">High Scores</string>


    <!-- Main menu strings string -->
    <string name="txt_main_menu">Othello</string>
    <string name="btnStartGame">Start Game</string>
    <string name="menuPlayerOne">:Player1</string>
    <string name="menuPlayer2">Player2:</string>
    <!--menu strings-->
    <string name="menu_rules">How To Play</string>
    <string name="menu_scores">High Scores</string>


    <!-- Scores Page title string -->
    <string name="TopScores">Top 5 scores</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Game Rules Strings -->
    <string name="btnContinue">Continue</string>
    <string name="rule1">An Othello game always starts off in this position
        shown; with two discs of each colour intersecting each other diagonally.
        The top right disc is always black from either players sitting view.
    </string>
    <string name="rule2">First move always goes to black, in order to make a
        legal move the player must place their colour on one of the empty
        squares on the board. The disc must directly sandwich one or more
        opposing colours, in either horizontal, vertical or diagonal directions.
        This is then followed by the flipping of the sandwiched discs. If a
        player has no moves available to them. Their turn is forfeit until they
        have an available move.
    </string>
    <string name="rule3">The game continues on until the players either run out
        of spaces on the board or there are no valid moves left.
        The winner is decided by the number of points or pieces he or she has.
        If a player runs out of time, they automatically lose, regardless
        of accumulated points
    </string>

    <!-- Othello Game board strings -->
    <string name="label_player_one">PLAYER 1</string>
    <string name="label_player_two">PLAYER 2</string>
    <string name="label_timer">No timer set/started</string>
    <string name="label_score">Current Score: 2</string>
    <string name="title_activity_scores">Scores</string>

    <!-- The ID number from generated for the Othello Facebook App - this is
    required for facebook SDK access -->
    <string name="facebook_app_id">642126629251885</string>

    <!--Slide bar rule strings -->
    <string name="howToPlay">No one likes being told what to do\n\nGood thing you only need a few simple rules to quickly start playing your own games of Othello\nJust pull the drawer in or tap the icon at the top left to get started</string>
    <string name="AimOfTheGame">
        is one of superiority\n\nOutwit your opponent and take control of the
        game board by outnumbering your opponents pieces with your own.
    </string>
    <string name="PlayingOthello">Players take turns placing counters on an 8x8
        board. The idea here is to sandwich tokens and flip them.\n\nOnce you
        get a few games under your belt it will become fairly easy to
        understand and you should find yourself planning strategies against your opponent. Remember openings and endgame play is equally important.
    </string>
    <string name="BasicRules">Black/bottom always goes first\n\n
        You may only place your piece beside an opponent\'s piece\n\n
        Flip as many pieces as you can by sandwiching opponents pieces between your own (in either horizontal, vertical or diagonal directions)\n\n
        If you can\'t make a move your turn is forfeit\n\n
    </string>
    <string name="HowToWin">By having the most counters on the board when there are no more moves left for either player.\n\n
        Beware: If you have opted for a timed game and run out of time - You will lose regardless of your score.
    </string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="checkboxColourBlind">COLOUR-BLIND MODE</string>

</resources>
