<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.CSC.othello3054.game.Game.Menu"
    android:layout_weight="1"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:baselineAligned="false">
    <!--Linear layout used to maintain consistent layout throughout many devices-->

    <!--Title - using 500 theme colour -->
    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="New Game of"
        android:textAllCaps="true"
        android:textColor="@color/noir"
        android:gravity="end|bottom"
        android:singleLine="true"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:text="Othello"
        android:textAllCaps="true"
        android:textColor="@color/colour_500_orange"
        android:gravity="end|top"
        android:textStyle="bold"/>

    <!--Horizontal layout to organise input fields -->
    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >


        <!--Player 1 name input - note the weight of 1, this allows it to
        span the screen to maintain a professional layout. This repeats itself
        in player 2-->
        <EditText
            android:id="@+id/player1Edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:layout_weight="1"
            android:singleLine="true"
            android:textColor="@color/colour_accent_blue"
            android:inputType="textCapWords"/>

        <!--Player 1 label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_player_one"
            android:textColor="@color/colour_700_orange"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <!-- another horizontal layout to organise the layout for player 2-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <!-- Player 2 input -->
        <EditText
            android:id="@+id/player2Edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:layout_weight="1"
            android:singleLine="true"
            android:textColor="@color/colour_accent_blue"
            android:inputType="textCapWords"/>

        <!--Player 2 label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_player_two"
            android:textColor="@color/colour_700_orange"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <!--Spinner used to select timer values -->
    <Spinner
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/checkboxColourBlind"
            android:id="@+id/cbMode"
            android:singleLine="true"
            android:textColor="@color/colour_accent_blue"
            android:layout_weight="1"
            android:layout_gravity="bottom|start"
            android:textStyle="bold"
            />

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_action_accept"
            fab:fab_colorNormal="@color/colour_500_orange"
            fab:fab_colorPressed="@color/colour_700_orange"
            fab:fab_colorRipple="@color/colour_100_orange"
            />
    </LinearLayout>

</LinearLayout>
